--- a/src/app/orbit-list/orbit-list.component.html
+++ b/src/app/orbit-list/orbit-list.component.html
@@ -1,12 +1,19 @@
 <h3>Orbit Report</h3>
 <table>
-   <tr class="header-row">
-      <th class="sortable">Name</th>
-      <th class="sortable">Type</th>
-      <th>Operational</th>
-      <th>Orbit Type</th>
-      <th>Launch Date</th>
-   </tr>
-   <tr *ngFor="let satellite of satellites"></tr>
-   <!-- TODO: put <tr *ngFor=""></tr> here -->
+    <tr class="header-row">
+        <th (click)="sort('name')" class="sortable">Name</th>
+        <th (click)="sort('type')" class="sortable">Type</th>
+        <th>Operational</th>
+        <th>Orbit Type</th>
+        <th>Launch Date</th>
+    </tr>
+    <tr *ngFor="let satellite of satellites">
+        <td>{{satellite.name}}</td>
+        <td [class.warning]=satellite.shouldShowWarning()>{{satellite.type}}</td>
+        <td>{{satellite.launchDate}}</td>
+        <td>{{satellite.orbitType}}</td>
+        <td>{{satellite.launchDate}}</td>
+    </tr>
+    <!-- <app-orbit-list [satellites]="displayList"></app-orbit-list> -->
+    <!-- TODO: put <tr *ngFor=""></tr> here -->
 </table>
